# dtrpg-app.rs

./: .gitignore  .releaserc.yaml  AGENTS.md  Cargo.toml  README.md  SECURITY.md  rustfmt.toml
.github/workflows/: build.yaml  bump-version.yaml  debug.yaml  nightly.yaml  package.yaml  pr.yaml  release.yaml  windows-spike.yaml
assets/icon/: icon.icns
crates/dtrpg-core/: Cargo.toml  build.rs
crates/dtrpg-core/src/: constants.rs  logging.rs  main.rs
crates/dtrpg-core/src/app/: assets.rs  mod.rs  shell.rs
crates/dtrpg-core/src/services/: collections_sdk.rs  login.rs  mod.rs  retry.rs  sdk.rs
crates/dtrpg-core/src/services/sdk/: connection.rs  mod.rs
crates/dtrpg-core/src/services/sdk/collections/: errors.rs  gateway.rs  mod.rs
crates/dtrpg-gui/: Cargo.toml
crates/dtrpg-gui/src/: lib.rs
crates/dtrpg-gui/src/ui/: mod.rs
crates/dtrpg-gui/src/ui/app/: mod.rs
crates/dtrpg-gui/src/ui/controllers/: mod.rs
crates/dtrpg-gui/src/ui/window/: mod.rs
crates/dtrpg-gui/src/ui/windows/: app.rs
crates/dtrpg-gui/src/view_models/: library.rs  mod.rs
crates/dtrpg-ui/: Cargo.toml  build.rs
crates/dtrpg-ui/i18n/: de.yaml  en.yaml  fr.yaml
crates/dtrpg-ui/src/: build_info.rs  lib.rs
crates/dtrpg-ui/src/controllers/: activity.rs  auth_state.rs  library.rs  login.rs  mod.rs  settings.rs  tabs.rs
crates/dtrpg-ui/src/credentials/: keys.rs  mod.rs  model.rs  store.rs
crates/dtrpg-ui/src/data/: activity.rs  auth_state.rs  avatar.rs  catalog_cache.rs  collection.rs  collections_cache.rs  constants.rs  cover_cache.rs  enums.rs  events.rs  file_openers.rs  library.rs  mod.rs  notification.rs  paths.rs  profile.rs  selection.rs  state.rs  storage.rs  theme.rs  ui_preferences.rs  ui_prefs.rs  ui_state.rs
crates/dtrpg-ui/src/i18n/: mod.rs
crates/dtrpg-ui/src/services/: collections.rs  mod.rs  network_monitor.rs  retry.rs  stub.rs
crates/dtrpg-ui/src/ui/: actions.rs  mod.rs  widgets.rs
crates/dtrpg-ui/src/ui/app/: mod.rs
crates/dtrpg-ui/src/ui/views/: activity_panel_view.rs  alert_history_view.rs  catalog_view.rs  detail_panel_view.rs  item_popover_view.rs  login_view.rs  manage_collections_dialog.rs  mod.rs  notification_banner_view.rs  root_view.rs  settings_account_view.rs  settings_advanced_view.rs  settings_appearance_view.rs  settings_file_openers_view.rs  settings_storage_view.rs  settings_view.rs  settings_window_view.rs  sidebar_view.rs  status_bar_view.rs  tab_strip_view.rs  title_bar_view.rs  toolbar_view.rs  zip_preview_popover.rs
crates/dtrpg-ui/src/ui/windows/: app.rs  login.rs
crates/dtrpg-ui/src/util/: datetime.rs  file_info.rs  file_presence.rs  file_size.rs  filter.rs  hash.rs  image_format.rs  init.rs  item_opener.rs  matching.rs  mod.rs  pluralize.rs  publisher.rs  reveal.rs  size.rs  sort.rs  stubs.rs  symlink.rs  test.rs  text.rs  zip_preview.rs
crates/dtrpg-ui/src/view_models/: library.rs
openspec/changes/account-reset-api-key-inline/: proposal.md  tasks.md
openspec/changes/activity-button-progress-indicator/: proposal.md  tasks.md
openspec/changes/activity-panel-anchor-to-button/: proposal.md
openspec/changes/activity-panel-button-icon-size/: proposal.md  tasks.md
openspec/changes/activity-panel-improvements/: proposal.md  tasks.md
openspec/changes/add-catalog-title-tooltip/: design.md  proposal.md  tasks.md
openspec/changes/add-release-packaging-workflow/: design.md  proposal.md  tasks.md
openspec/changes/add-rust-main-window-structure/: proposal.md  tasks.md
openspec/changes/add-sentry-integration/: design.md  proposal.md  tasks.md
openspec/changes/adjust-max-concurrent-downloads-bounds/: tasks.md
openspec/changes/adopt-gpui-component-primitives/: design.md  proposal.md  tasks.md
openspec/changes/alert-history-copy-button/: design.md  proposal.md  tasks.md
openspec/changes/alert-history-view/: tasks.md
openspec/changes/always-open-main-window/: proposal.md  tasks.md
openspec/changes/avatar-circular-image/: design.md  proposal.md  tasks.md
openspec/changes/avatar-load-and-cache/: tasks.md
openspec/changes/avatar-menu-user-info/: design.md  proposal.md  tasks.md
openspec/changes/catalog-bulk-download-context-menu/: design.md  tasks.md
openspec/changes/catalog-bulk-selection/: design.md  proposal.md  tasks.md
openspec/changes/catalog-cache-incremental-write/: tasks.md
openspec/changes/catalog-collections-improvements/: proposal.md  tasks.md
openspec/changes/catalog-entry-detail-disclosure/: design.md  proposal.md
openspec/changes/catalog-layout-switcher-icons/: proposal.md
openspec/changes/catalog-list-column-alignment/: design.md  proposal.md  tasks.md
openspec/changes/catalog-list-column-sort-and-resize/: tasks.md
openspec/changes/catalog-list-publisher-sections/: proposal.md  tasks.md
openspec/changes/catalog-live-merge/: design.md  tasks.md
openspec/changes/catalog-load-progress/: design.md  proposal.md  tasks.md
openspec/changes/catalog-loading-state-indicator/: tasks.md
openspec/changes/catalog-menu-keybindings/: design.md  tasks.md
openspec/changes/catalog-remote-sync-reconciliation/: design.md  proposal.md  tasks.md
openspec/changes/catalog-startup-cache/: design.md  proposal.md  tasks.md
openspec/changes/catalog-tab-cmd-number-shortcuts/: design.md  proposal.md  tasks.md
openspec/changes/catalog-thumbnail-loading/: design.md  tasks.md
openspec/changes/catalog-virtualized-rendering/: proposal.md  tasks.md
openspec/changes/confirm-collection-delete/: design.md  proposal.md  tasks.md
openspec/changes/confirm-download-removal/: design.md  proposal.md  tasks.md
openspec/changes/copy-alert-error-message/: proposal.md  tasks.md
openspec/changes/cover-cache-file-extensions/: proposal.md  tasks.md
openspec/changes/create-default-download-directory/: proposal.md  tasks.md
openspec/changes/define-rust-catalog-entry-detail-view/: design.md  proposal.md  tasks.md
openspec/changes/define-rust-main-window-library-layout/: design.md  (+2 more)
src/: main.rs
src/app/: mod.rs  shell.rs
src/services/: mod.rs  sdk.rs  stub.rs
src/ui/: mod.rs
src/view_models/: library.rs
(+695 files in other folders)
