[workspace]
default-members = ["crates/dtrpg-core", "crates/dtrpg-ui"]
members = [
    "crates/dtrpg-core",
    "crates/dtrpg-ui",
]
resolver = "2"

[workspace.package]
version = "0.0.3"
edition = "2024"
description = "DriveThruRPG desktop frontend in Rust"
license = "MIT"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code           = "deny"
unused_qualifications = "deny"

[workspace.lints.clippy]
expect_used = "deny"
unwrap_used = "deny"

[workspace.dependencies]
dtrpg-sdk = { git = "https://github.com/pilgrimagesoftware/dtrpg-sdk.rs" }
dtrpg-ui = { path = "crates/dtrpg-ui" }
dtrpg-core = { path = "crates/dtrpg-core" }
anyhow = "1"
# gpui = "0.2.2"
tokio = { version = "1", features = ["rt-multi-thread"] }
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
cocoa = "=0.26.0"
cocoa-foundation = "=0.2.0"
const_format = "0.2"
convert_case = "0.8.0"
core-foundation = "=0.10.0"
core-foundation-sys = "0.8.6"
core-video = { version = "0.5.2", features = ["metal"] }
metal = "0.33"
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
