[package]
name = "dtrpg-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component = { workspace = true }


[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa.workspace = true
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.24"
core-video.workspace = true
core-text = "21"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
# log.workspace = true
# media.workspace = true
# objc.workspace = true
# objc2 = { version = "0.6", optional = true }
# objc2-metal = { version = "0.3", optional = true }
# mach2.workspace = true
#TODO: replace with "objc2"
metal.workspace = true
