[package]
name = "dtrpg-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
gpui-component = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
keyring = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
rfd = { workspace = true }
md5 = { workspace = true }
reqwest = { workspace = true }
rust-i18n = { workspace = true }
chrono = { workspace = true }
sys-locale = { workspace = true }
open = { workspace = true }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3.27.0"
gpui = { workspace = true, features = ["test-support"] }

[target.'cfg(target_os = "macos")'.dependencies]
block = "0.1"
cocoa.workspace = true
cocoa-foundation.workspace = true
core-foundation.workspace = true
core-foundation-sys.workspace = true
core-graphics = "0.25"
core-video.workspace = true
core-text = "22"
# WARNING: If you change this, you must also publish a new version of zed-font-kit to crates.io
font-kit = { git = "https://github.com/zed-industries/font-kit", rev = "94b0f28166665e8fd2f53ff6d268a14955c82269", package = "zed-font-kit", version = "0.14.1-zed", optional = true }
foreign-types = "0.5"
# log.workspace = true
# media.workspace = true
# objc.workspace = true
# objc2-metal = { version = "0.3", optional = true }
# mach2.workspace = true
#TODO: replace with "objc2"
metal.workspace = true
gpui-component-assets.workspace = true
# Used for OS-locale-aware absolute timestamp formatting (NSDateFormatter)
# in `util::datetime::format_absolute` — already present in the dependency
# tree at this exact version via `gpui-component`, so this adds no new
# duplicate resolution.
objc2 = "0.6"
objc2-foundation = "0.3"
